--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,5 @@ deploy.ant.properties.file=C:\\Users\\Tazbeea Tazakka\\AppData\\Roaming\\NetBean
 j2ee.server.domain=C:/Users/Tazbeea Tazakka/AppData/Roaming/NetBeans/7.4/apache-tomcat-7.0.41.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 7.0.41
 j2ee.server.instance=tomcat70:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 7.0.41:base=apache-tomcat-7.0.41.0_base
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Tazbeea Tazakka\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
